manual-netpols/frontend-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend

    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system # Allows outgoing traffic to pods in the 'kube-system' namespace
    ports:
    - protocol: TCP # Allows outgoing TCP traffic on port 53
      port: 53
    - protocol: UDP # Allows outgoing UDP traffic on port 53
      port: 53
    - protocol: TCP # Allows outgoing TCP traffic on port 80
      port: 80
